fix footer overflow

--- a/style.scss
+++ b/style.scss
@@ -499,7 +499,7 @@ nav {
 
 footer {
   text-align: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
